<resources>
    <string name="app_name">BeritaKu</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="headlines_news">Headlines News</string>

    <string name="tab_text_1">Business</string>
    <string name="tab_text_2">Entertainment</string>
    <string name="tab_text_3">Health</string>
    <string name="tab_text_4">Science</string>
    <string name="tab_text_5">Sport</string>
    <string name="tab_text_6">Technology</string>
    <string name="title_favorite">Favorite</string>
    <string name="name">Nama</string>
    <!--    <string name="alamat">Alamat</string>-->
    <string name="simpan">Simpan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rePassword">Retype Password</string>
    <string name="error_et_name">Nama tidak boleh kosong</string>
    <string name="error_et_email">Email tidak boleh kosong</string>
    <string name="error_et_password">Password tidak boleh kosong</string>
    <string name="error_pass_not_match">Password tidak cocok</string>
    <string name="error_email_not_valid">Email tidak valid</string>
    <string name="btn_edit">Edit</string>
    <string name="read_more">Read more</string>
    <string name="more">more</string>
    <string name="btn_login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have an account ?</string>
    <string name="have_an_account">Have an account ?</string>
    <string name="login">Login</string>
    <string name="discover">Discover</string>
    <string name="news_from_all_over_the_world">News from all over the world</string>
    <string name="back_button_desc">Back Button</string>
    <string name="action_favorite_desc">Action Favorite</string>
    <string name="action_share_desc">Action Share</string>
    <!--    <string name="button_search_desc">Button Search</string>-->
    <string name="select_photo_desc">Select Photo</string>
    <string name="authentication_image_acc_desc">Authentication Image Acc</string>
    <string name="text_signup">Signup</string>
    <!--    <string name="empty_image_acc_desc">Empty Image Acc</string>-->
    <!--    <string name="error_news_not_found">news not found</string>-->
    <!--    <string name="load_data_image_acc_desc">Load Data Image Acc</string>-->
    <!--    <string name="load_data_status">load data ...</string>-->
    <string name="search_hint">explore news</string>
    <!--    <string name="nothing_found_desc">nothing found</string>-->
    <!--    <string name="load_data_desc">load data ...</string>-->
    <string name="sign_up_desc">Sign Up</string>
    <string name="environment">Environment</string>
    <string name="food">Food</string>
    <string name="politics">Politics</string>
    <string name="top">Top</string>
    <string name="tourism">Tourism</string>
    <string name="world">World</string>
    <string name="searchbar_hint">Temukan berita mu</string>
    <!--    <string name="no_account">Your profile not yet setup</string>-->
    <string name="text_anonim">Anonim</string>
    <string name="web_view_title">Read News</string>
    <string name="let_set_your_profile">Let set your profile!</string>
    <string name="btn_go">Go !</string>
    <string name="oopss_nothing_found">Oopss, nothing found</string>
    <string name="oopss_something_went_wrong">Oopss, something went wrong</string>
    <string name="txt_untuk_anda">Untuk Anda</string>
    <string name="txt_selengkapnya">Selengkapnya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name="no_account">Your profile not yet setup</string>-->
</resources>